--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="139dp"
+        android:layout_width="wrap_content"
         android:layout_height="61dp"
         android:layout_marginBottom="188dp"
+        android:textSize="44sp"
         android:text="Начать"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
