--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,49 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/colorBack</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">@color/colorAccent</item>
+        <item name="android:checkboxStyle">@style/checkboxStyle</item>
+        <item name="buttonStyle">@style/buttonStyle</item>
+        <item name="android:switchStyle">@style/switchStyle</item>
+        <item name="android:progressBarStyleHorizontal">@style/progressStyle</item>
+    </style>
+
+
+    <style name="checkboxStyle" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="android:textColor">@color/colorPrimary</item>
+       <!-- <item name="android:state_checked">@drawable/checkbox_icon</item>-->
+        <item name="android:colorControlNormal">@color/colorPrimary</item>
+
+        
+    </style>
+
+    <style name="buttonStyle" parent="TextAppearance.AppCompat.Widget.Button.Borderless.Colored">
+
+    </style>
+    
+    <style name="switchStyle" parent="Widget.AppCompat.CompoundButton.Switch">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="track">@drawable/abc_switch_track_mtrl_alpha</item>
+        <item name="android:thumb">@drawable/abc_switch_thumb_material</item>
+
+        <item name="android:background">?attr/controlBackground</item>
+        <item name="showText">true</item>
+        <item name="switchPadding">32dp</item>
+        <item name="android:textOn">@string/abc_capital_on</item>
+        <item name="android:textOff">@string/abc_capital_off</item>
+    </style>
+
+
+    <style name="progressStyle" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:progressBackgroundTint">@color/colorPrimaryDark</item>
+        <item name="android:progressTint">@color/colorAccent</item>
     </style>
 
 </resources>
